# mart_api

./: .env  pyproject.toml
authentication/: pyproject.toml
authentication/app/: main.py
db_service/: .env  alembic.ini  db.sqlite  pyproject.toml
db_service/alembic/versions/: fdd6c2ad8289_initial_setup.py
db_service/app/: config.py  main.py
db_service/app/crud/: user_crud.py
db_service/app/operations/: user_operation.py
db_service/app/routers/: user_router.py
notification/: pyproject.toml
shared/: pyproject.toml
shared/models/: customer.py  inventory.py  order.py  order_detail.py  product.py  user.py
users/: .env  pyproject.toml
users/app/: main.py  operations.py
