[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Aneeq Khatri <aneeqabdulsamad5761@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = "^3.3.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
